--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -21,5 +21,6 @@
   },
   "dependencies": {
     "@lerna-lzy/utils": "^4.0.1"
-  }
+  },
+  "gitHead": "5efbb50e3a32ead31c3a7bb4e333a8fefdde5524"
 }
