--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -23,7 +23,8 @@
     "@lerna-lzy/utils": "^4.0.9"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "registry": "https://npm.pkg.github.com/"
   },
   "gitHead": "779ff57dea0c890e1494e95c35cd8c3cd0f7f265"
 }
